--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-splash-screen></app-splash-screen>
+<header *ngIf="!connected" @grow>Offline!!! check internet connection</header>
 <router-outlet></router-outlet>
