max width added to all routes

--- a/src/app/routes/login/login.component.html
+++ b/src/app/routes/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="glf-container">
+<div class="glf-container glf-max-width">
     <h1>Welcome</h1>
     <form class="glf-form-container" [formGroup]="loginForm">
         <div class="glf-form-item">
