--- a/src/app/routes/signup/signup.component.html
+++ b/src/app/routes/signup/signup.component.html
@@ -4,7 +4,7 @@
     </button>
     <p>Sign Up</p>
 </header>
-<form class="glf-form-container" [formGroup]="signupForm">
+<form class="glf-form-container glf-max-width" [formGroup]="signupForm">
     <mat-form-field class="glf-form-item">
         <input matInput placeholder="First name" formControlName="firstName">
     </mat-form-field>
